[tool.poetry]
name = "openai-api-explorations"
version = "0.1.0"
description = "Explore the OpenAI API"
authors = ["Memento Mori <xingfanxia@gmail.com>"]
license = "MIT"
readme = "README.md"
# packages = [{include = "openai_api_explorations"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.0"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
