[tool.poetry]
name = "openai-api-explorations"
version = "0.1.0"
description = "Explore the OpenAI API"
authors = ["Memento Mori <xingfanxia@gmail.com>"]
license = "MIT"
readme = "README.md"
# packages = [{include = "openai_api_explorations"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.0"
pydub = "^0.25.1"
whisperx = {git = "https://github.com/m-bain/whisperx.git"}
torch = "^1.13.1"
ffmpeg = "^1.4"
numpy = "^1.24.2"
pandas = "^1.5.3"
soundfile = "0.10.2"
transformers = "^4.26.1"
ffmpeg-python = "0.2.0"
more-itertools = "^9.1.0"
torchaudio = "^0.13.1"
tqdm = "^4.65.0"
torchvision = "^0.14.1"
openai-whisper = {git = "https://github.com/openai/whisper.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
